Remove DeepSite badge

--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,6 @@
     <script>
         feather.replace();
     </script>
-<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
+<!-- <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script> -->
 </body>
 </html>
