--- a/public/order3.html
+++ b/public/order3.html
@@ -65,6 +65,6 @@
     <script>
         feather.replace();
     </script>
-<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
+<!-- <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script> -->
 </body>
 </html>
