spotify playlist embeded

--- a/public/order1.html
+++ b/public/order1.html
@@ -45,10 +45,21 @@
                 </div>
                 
                 <p class="font-quicksand text-gray-700 text-lg leading-relaxed mb-8">
-                    **Dear Friend,**<br><br>
-                    This special order unlocked a secret message! In a world of fleeting trends, remember the joy of creation. We're so grateful you stopped by the Retro Sip Café. May your code be clean, your colors vibrant, and your inspiration endless. Always keep that pixel-perfect passion burning bright.<br><br>
+                    Dear Friend,<br><br>
+                    This special order is for you from us. With love ❤️<br><br>
                     — The Retro Sip Team
                 </p>
+
+                <!-- Spotify Playlist Embed -->
+                <div class="w-full mb-8">
+                    <iframe data-testid="embed-iframe" 
+                            style="border-radius:12px" 
+                            src="https://open.spotify.com/embed/playlist/0ULK5GUlErIkAFv1e0umJ9?utm_source=generator" 
+                            width="100%" height="352" frameBorder="0" 
+                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                            loading="lazy">
+                    </iframe>
+                </div>
 
                 <a href="index.html" class="px-8 py-3 font-pixel text-sm rounded-lg text-white shadow-lg bg-purple-pink-gradient hover:opacity-90 transition-opacity mt-4">
                     Back to Menu
@@ -65,6 +76,5 @@
     <script>
         feather.replace();
     </script>
-<!-- <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script> -->
 </body>
 </html>
