--- a/public/order3.html
+++ b/public/order3.html
@@ -45,9 +45,11 @@
                 </div>
                 
                 <p class="font-quicksand text-gray-700 text-lg leading-relaxed mb-8">
-                    **Dear Friend,**<br><br>
-                    This special order unlocked a secret message! In a world of fleeting trends, remember the joy of creation. We're so grateful you stopped by the Retro Sip Café. May your code be clean, your colors vibrant, and your inspiration endless. Always keep that pixel-perfect passion burning bright.<br><br>
-                    — The Retro Sip Team
+                    Dear mari,<br><br>
+                    I do have a lot to say, but instead i made this website for you. I know it's nothing fancy or perfect but i still hope this touches your heart and warms it up in this cold weather. I'm not that great with words... but since you kept all the greeting cards i gave you as kids, i hope you find this digital space of ours just as comforting. 
+                    I hope you liked this 21st birthday present. Hope to see you soon doctor♡
+                    I love you. <br><br>
+                            -Megha
                 </p>
 
                 <a href="index.html" class="px-8 py-3 font-pixel text-sm rounded-lg text-white shadow-lg bg-purple-pink-gradient hover:opacity-90 transition-opacity mt-4">
