--- a/public/order2.html
+++ b/public/order2.html
@@ -45,23 +45,11 @@
                 </div>
                 
                 <p class="font-quicksand text-gray-700 text-lg leading-relaxed mb-8">
-                    Dear Bestfriend,<br><br>
-                    It still feels unbelievable that you are so far away from me, studying in Russia. Even though we are not together every day like before, I want you to know one thing  our bond will never change.
-
-You are not just my best friend. You are my sister, my soulmate, and my biggest strength. For the last 15 years, we have laughed together, cried together, fought a little, but loved a lot. We grew up side by side, and every memory with you is like a treasure to me.
-
-I miss our random talks, our long walks, our late-night chats, and the way we understood each other without even speaking. But even from miles away, I still feel your presence with me. Whenever something good happens, you are the first person I want to tell. And whenever I feel low, I still look for your comfort.
-
-I know you are working hard there, chasing your dreams and I’m so proud of you. Sometimes it must be tough, sometimes you might feel lonely, but please remember I am always with you, just a message away. Distance can never change our friendship. It can only make it stronger.
-
-Our friendship is not about being together every day. It’s about feeling connected even when we are far apart. And I know, no matter where life takes us, we will always find our way back to each other.
-
-Thank you for being my constant support, my safe place, and my favorite person. I’m waiting for the day you return so we can make thousands of new memories again.
-
-Till then, keep shining. I’m always proud of you. I love you endlessly.<br><br>
-
-       -With all my heart, <br>
-          Your Bestfriend who's waiting for you to come back home.
+                    Dear mari,<br><br>
+                    I do have a lot to say, but instead i made this website for you. I know it's nothing fancy or perfect but i still hope this touches your heart and warms it up in this cold weather. I'm not that great with words... but since you kept all the greeting cards i gave you as kids, i hope you find this digital space of ours just as comforting. 
+                    I hope you liked this 21st birthday present. Hope to see you soon doctor♡
+                    I love you. <br><br>
+                            -Megha
                 </p>
 
                 <a href="index.html" class="px-8 py-3 font-pixel text-sm rounded-lg text-white shadow-lg bg-purple-pink-gradient hover:opacity-90 transition-opacity mt-4">
